--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ScholarSpark Investor Landing</title>
+    <link rel="icon" type="image/png" href="/logos/favicon.png">
+    <title>ScholarSpark</title>
   </head>
   <body>
     <div id="root"></div>
